7. application/nginx/k8s/minikube/my-site-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: my-site-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: my-site.localhost
      http:
        paths:
          - path: /(.*)
            backend:
              service:
                name: my-site-nginx-service
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-site-nginx-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-site-nginx
  template:
    metadata:
      labels:
        app: my-site-nginx
    spec:
      imagePullSecrets:
      - name: regsecret
      containers:
        - name: my-site-nginx
          image: docker-nexus.localhost/repository/docker-repo/my-site-nginx:1.0.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 100Mi
              cpu: 0.4
            limits:
              memory: 500Mi
              cpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: my-site-nginx-service
spec:
  selector:
    app: my-site-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
